--- a/views/admin/css/cdmLink.css
+++ b/views/admin/css/cdmLink.css
@@ -27,6 +27,11 @@
     top: -25px;
 }
 
+.cdm-link .field select {
+    width: auto;
+    margin-left:15px; 
+}
+
 .cdm-link #cdm-search-blurb {
 position:absolute;
   top: 10px;
@@ -45,10 +50,6 @@ position:absolute;
 
 .cdm-link #cdm-search-div:hover > #cdm-search-blurb {
     visibility: visible;
-}
-
-.cdm-link #cdm-search-div button {
-display:block;		 
 }
 
 .cdm-link #cdmimportsubmit {
